// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`aria\` prop is \`true\` as shallow should match the snapshot 1`] = `
<div
  aria-checked={false}
  className="icheckbox"
  role="checkbox"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
      }
    }
    type="checkbox"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "100%",
        "left": "0%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "0%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`increaseArea\` prop is \`-30%\` as shallow should match the snapshot 1`] = `
<div
  className="icheckbox"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "40%",
        "left": "30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "30%",
        "width": "40%",
      }
    }
    type="checkbox"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "40%",
        "left": "30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "30%",
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`increaseArea\` prop is \`-60%\` as shallow should match the snapshot 1`] = `
<div
  className="icheckbox"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "0%",
        "left": "50%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "50%",
        "width": "0%",
      }
    }
    type="checkbox"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "0%",
        "left": "50%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "50%",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`increaseArea\` prop is \`30%\` as shallow should match the snapshot 1`] = `
<div
  className="icheckbox"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "160%",
        "left": "-30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "-30%",
        "width": "160%",
      }
    }
    type="checkbox"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "160%",
        "left": "-30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "-30%",
        "width": "160%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`insert\` prop is \`<div>test</div>} />\` as render should match the snapshot 1`] = `
<div
  class="icheckbox"
>
  <input
    style="opacity:0;position:absolute"
    type="checkbox"
    value=""
  />
  <div>
    test
  </div>
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` and the \`isMobile\` prop is \`true\` as shallow an \`<input />\` should match style attribute to the snapshot 1`] = `
Object {
  "position": "absolute",
  "visibility": "hidden",
}
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` as mount should match the default props snapshot 1`] = `
Object {
  "activeClassName": null,
  "aria": false,
  "checkboxClassName": "icheckbox",
  "checked": false,
  "checkedClassName": "checked",
  "className": null,
  "disabled": false,
  "disabledClassName": "disabled",
  "focusClassName": "focus",
  "hoverClassName": "hover",
  "hovered": false,
  "id": null,
  "increaseArea": "",
  "indeterminate": false,
  "indeterminateClassName": "indeterminate",
  "inheritClassName": false,
  "inheritID": false,
  "inputType": "checkbox",
  "insert": null,
  "isMobile": false,
  "label": null,
  "name": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "radioClassName": "iradio",
  "value": "",
}
`;

exports[`Input component when the required \`inputType\` prop is set to \`checkbox\` as mount should match the default state snapshot 1`] = `
Object {
  "active": false,
  "checked": false,
  "focused": false,
  "hovered": false,
  "indeterminate": false,
  "prevPropChecked": false,
}
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`aria\` prop is \`true\` as shallow should match the snapshot 1`] = `
<div
  aria-checked={false}
  className="iradio"
  role="radio"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "opacity": 0,
        "position": "absolute",
      }
    }
    type="radio"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "100%",
        "left": "0%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "0%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`increaseArea\` prop is \`-30%\` as shallow should match the snapshot 1`] = `
<div
  className="iradio"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "40%",
        "left": "30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "30%",
        "width": "40%",
      }
    }
    type="radio"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "40%",
        "left": "30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "30%",
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`increaseArea\` prop is \`-60%\` as shallow should match the snapshot 1`] = `
<div
  className="iradio"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "0%",
        "left": "50%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "50%",
        "width": "0%",
      }
    }
    type="radio"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "0%",
        "left": "50%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "50%",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`increaseArea\` prop is \`30%\` as shallow should match the snapshot 1`] = `
<div
  className="iradio"
>
  <input
    checked={false}
    disabled={false}
    label={null}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "160%",
        "left": "-30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "-30%",
        "width": "160%",
      }
    }
    type="radio"
    value=""
  />
  <ins
    className="iCheck-helper"
    onClick={[Function]}
    role="presentation"
    style={
      Object {
        "background": "#fff",
        "border": 0,
        "cursor": "pointer",
        "display": "block",
        "height": "160%",
        "left": "-30%",
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "top": "-30%",
        "width": "160%",
      }
    }
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`insert\` prop is \`<div>test</div>} />\` as render should match the snapshot 1`] = `
<div
  class="iradio"
>
  <input
    style="opacity:0;position:absolute"
    type="radio"
    value=""
  />
  <div>
    test
  </div>
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` and the \`isMobile\` prop is \`true\` as shallow an \`<input />\` should match style attribute to the snapshot 1`] = `
Object {
  "position": "absolute",
  "visibility": "hidden",
}
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` as mount should match the default props snapshot 1`] = `
Object {
  "activeClassName": null,
  "aria": false,
  "checkboxClassName": "icheckbox",
  "checked": false,
  "checkedClassName": "checked",
  "className": null,
  "disabled": false,
  "disabledClassName": "disabled",
  "focusClassName": "focus",
  "hoverClassName": "hover",
  "hovered": false,
  "id": null,
  "increaseArea": "",
  "indeterminate": false,
  "indeterminateClassName": "indeterminate",
  "inheritClassName": false,
  "inheritID": false,
  "inputType": "radio",
  "insert": null,
  "isMobile": false,
  "label": null,
  "name": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "radioClassName": "iradio",
  "value": "",
}
`;

exports[`Input component when the required \`inputType\` prop is set to \`radio\` as mount should match the default state snapshot 1`] = `
Object {
  "active": false,
  "checked": false,
  "focused": false,
  "hovered": false,
  "indeterminate": false,
  "prevPropChecked": false,
}
`;
